# project-rdi-cape-town

./: .gitignore  README.md  project-rdi-cape-town.code-workspace  pyproject.toml
OSRM/: docker-compose-osrm.yaml
conf/base/: catalog.yml  logging.yml
docs/source/: conf.py  index.rst
notebooks/: 01_test_extraction.ipynb  02_test_input_data.ipynb  24A_ejwillemse_SC20220601_household_waste_routing_scenario_test_syn_gen_fixed_speed.ipynb  24B_ejwillemse_SC20220601_household_waste_routing_scenario_test_syn_gen_residential_streets_fixed_speed.ipynb  24C_ejwillemse_SC20220601_household_waste_routing_scenario_test_streets_only_fixed_speed.ipynb  24D_ejwillemse_SC20220601_household_waste_routing_scenario_test_streets_only.ipynb  25_ejwillemse_SC20220601_waste_gen_syn_pop_results_combination.ipynb  26A_ejwillemse_SC20220601_household_waste_routing_scenario_test_syn_gen_fixed_speed_decentral.ipynb  26B_ejwillemse_SC20220601_household_waste_routing_scenario_test_syn_gen_residential_streets_fixed_speed_decentral.ipynb  26C_ejwillemse_SC20220601_household_waste_routing_scenario_test_streets_only_fixed_speed_decentral.ipynb  27_ejwillemse_SC20220601_get_streets.ipynb  28_ejwillemse_SC20220601_results_inspection.ipynb  results_summary.csv
src/: setup.py
src/mcarptif/: __init__.py  tests.py
src/mcarptif/converter/: __init__.py  input_converter.py  load_data.py  network_prep.py  py_data_write.py  py_gen_nearest_neighbour_lists.py  py_return_problem_data.py  solution_converter.py
src/mcarptif/osmnx_network_extract/: __init__.py  extract_grptif.py  extract_grptif_v2.py  extract_mcarptif.py  extract_vrp.py  network_code.py  network_code_garp.py  test.py
src/mcarptif/osrm_converter/: convert_vrptif.py
src/mcarptif/solver/: LS_MCARPTIF.py  __init__.py  alg_Ulusoy_part_c.pyx  calcMoveCost.py  evaluatesolutions.py  py_alg_extended_path_scanning_rr.py  py_alg_ulusoy_partition.py  py_display_solution.py  py_solution_test.py  (+2 more)
src/project_rdi_cape_town/: __init__.py  __main__.py  settings.py
src/tests/: test_run.py
(+4 files in other folders)
