[tool.kedro]
package_name = "project_rdi_cape_town"
project_name = "Project RDI Cape Town"
kedro_init_version = "0.18.10"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/project_rdi_cape_town -ra"""

[tool.poetry]
name = "project_rdi_cape_town"
version = "0.1.0"
description = ""
authors = ["ejwillemse <ejwillemse@gmail.com>"]
readme = "README.md"
packages = [{include = "src/project_rdi_cape_town"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
kedro = "^0.18.10"
kedro-datasets = "^1.4.1"
streamlit = "^1.23.1"
jupyter = "^1.0.0"
nbstripout = "^0.6.1"
awswrangler = "^2.18.0"
fsspec = "2022.11.0"
s3fs = "2022.11.0"
black = "^22.12.0"
watchdog = "^2.3.1"
pylint = "^2.16.2"
tables = "^3.8.0"
networkx = "^3.1"
matplotlib = "^3.7.1"
cython = "^0.29.35"
plotly = "^5.15.0"
geopy = "^2.3.0"
pyrosm = "^0.6.1"
shapely = "1.8.5"
osmnx = "<1.4.0"
keplergl = "^0.3.2"
python-igraph = "^0.10.4"
pygeos = ">=0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
